# magma

./: .bazelrc  WORKSPACE.bazel
.github/workflows/: build_all.yml  cwf-integ-test.yml  federated-integ-test.yml  lte-integ-test-bazel-magma-deb.yml  lte-integ-test-containerized.yml  lte-integ-test-magma-deb.yml  lte-integ-test.yml  sudo-python-tests.yml
cwf/gateway/: fabfile.py
cwf/gateway/integ_tests/: README.md
docs/readmes/basics/: prerequisites.md  quick_start_guide.md
docs/readmes/cwf/: dev_testing.md
docs/readmes/feg/: s1ap_federated_tests.md
feg/gateway/: fabfile.py
feg/gateway/services/envoy_controller/: BUILD.bazel
lte/gateway/: Vagrantfile  dev_tools.py  fabfile.py
lte/gateway/c/connection_tracker/src/: BUILD.bazel
lte/gateway/c/core/: BUILD.bazel
lte/gateway/c/li_agent/src/: BUILD.bazel
lte/gateway/c/sctpd/src/: BUILD.bazel
lte/gateway/c/session_manager/: BUILD.bazel
lte/gateway/configs/: gateway.mconfig  mobilityd.yml
lte/gateway/deploy/: agw_install_docker.sh  magma_trfserver.yml
lte/gateway/deploy/roles/magma_test/files/: clone_s1_tester.sh
lte/gateway/deploy/roles/trfserver/tasks/: main.yml
lte/gateway/docker/: .env  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.yaml
lte/gateway/docker/s1ap/: .env  docker-compose.s1ap.yaml  readme.md  run-s1ap.sh
lte/gateway/docker/services/s1aptester/: Dockerfile
lte/gateway/python/: BUILD.bazel  precommit.py
lte/gateway/python/integ_tests/: defs.mk
lte/gateway/python/integ_tests/federated_tests/: fabfile.py
lte/gateway/python/integ_tests/s1aptests/: s1ap_utils.py  s1ap_wrapper.py  test_3485_timer_for_default_bearer_with_mme_restart.py  test_attach_ics_drop_with_mme_restart.py  test_no_auth_resp_with_mme_restart_reattach.py  test_no_esm_information_rsp_with_mme_restart.py  test_no_identity_rsp_with_mme_restart.py
lte/gateway/python/magma/enodebd/: BUILD.bazel
lte/gateway/python/magma/mobilityd/: BUILD.bazel  ip_allocator_dhcp.py  ipv6_allocator_pool.py
lte/gateway/python/magma/mobilityd/tests/: BUILD.bazel  test_ip_allocator_dhcp.py
lte/gateway/release/: build-magma.sh
orc8r/tools/ansible/roles/pkgrepo/files/: BUILD.bazel
orc8r/tools/fab/: dev_utils.py  hosts.py  pkg.py  vagrant.py
orc8r/tools/packer/: magma-trfserver-virtualbox.json
orc8r/tools/packer/http/: user-data
orc8r/tools/packer/scripts/: cleanup_ubuntu.sh  ubuntu_setup.sh  update_ubuntu.sh
