# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")
load(
    "@io_bazel_rules_docker//docker/util:run.bzl",
    "container_run_and_commit",
)
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

package(default_visibility = ["//lte/gateway/c/sctpd/src:__subpackages__"])

cc_binary(
    name = "sctpd",
    srcs = ["sctpd.cpp"],
    linkstatic = True,
    visibility = ["//lte/gateway/release:__pkg__"],
    deps = [
        ":config",
        ":sctpd_downlink_impl",
        ":sctpd_event_handler",
        "//lte/protos:mconfigs_cpp_proto",
        "//orc8r/gateway/c/common/config:mconfig_loader",
        "//orc8r/gateway/c/common/sentry:sentry_wrapper",
        "//orc8r/gateway/c/common/service_registry",
        "//orc8r/protos:mconfigs_cpp_proto",
    ],
)

download_pkgs(
    name = "sctpd_prerequisites",
    image_tar = "@ubuntu_focal_amd64//image",
    packages = [
        "libcurl4",
        "libgoogle-glog0v5",
        "libsctp1",
    ]
)

install_pkgs(
    name = "sctpd_prerequisites_layer",
    image_tar = "@ubuntu_focal_amd64//image",
    installables_tar = ":sctpd_prerequisites.tar",
    installation_cleanup_commands = "rm -rf /var/lib/apt/lists/*",
    output_image_name = "sctpd_prerequisites_layer",
)

container_image(
    name = "sctpd_base_image",
    base = ":sctpd_prerequisites_layer",
    entrypoint = ["/usr/bin/sctpd"],
)

cc_image(
    name = "sctpd_image",
    base = ":sctpd_base_image",
    binary = ":sctpd",
)

cc_library(
    name = "sctpd_event_handler",
    srcs = ["sctpd_event_handler.cpp"],
    hdrs = ["sctpd_event_handler.hpp"],
    deps = [
        ":sctp_connection",
        ":sctpd_uplink_client",
    ],
)

cc_library(
    name = "sctpd_uplink_client",
    srcs = ["sctpd_uplink_client.cpp"],
    hdrs = ["sctpd_uplink_client.hpp"],
    deps = [
        ":util",
        "//lte/protos:sctpd_cpp_grpc",
    ],
)

cc_library(
    name = "sctpd_downlink_impl",
    srcs = ["sctpd_downlink_impl.cpp"],
    hdrs = ["sctpd_downlink_impl.hpp"],
    deps = [
        ":sctp_connection",
        "//lte/protos:sctpd_cpp_grpc",
    ],
)

cc_library(
    name = "sctp_connection",
    srcs = ["sctp_connection.cpp"],
    hdrs = ["sctp_connection.hpp"],
    deps = [
        ":sctp_desc",
        "//lte/protos:sctpd_cpp_grpc",
    ],
)

cc_library(
    name = "sctp_desc",
    srcs = ["sctp_desc.cpp"],
    hdrs = ["sctp_desc.hpp"],
    deps = [
        ":sctp_assoc",
    ],
)

cc_library(
    name = "sctp_assoc",
    srcs = ["sctp_assoc.cpp"],
    hdrs = ["sctp_assoc.hpp"],
    deps = [
        ":util",
    ],
)

cc_library(
    name = "util",
    srcs = ["util.cpp"],
    hdrs = ["util.hpp"],
    deps = [
        ":config",
        "//lte/protos:sctpd_cpp_grpc",
        "//orc8r/gateway/c/common/logging",
        "@system_libraries//:sctp",
    ],
)

cc_library(
    name = "config",
    hdrs = ["sctpd.hpp"],
)
